<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:text="@string/nickname"/>
    <EditText android:id="@+id/nick_name"
        android:layout_width="match_parent"
        android:nextFocusForward="@+id/password"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapSentences"
        android:hint="@string/nickname"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:paddingTop="8dp"
        android:text="@string/prompt_email"/>
    <EditText android:id="@+id/email"
        android:layout_width="match_parent"
        android:paddingTop="8dp"
        android:nextFocusForward="@+id/password"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"/>
    <TextView
        android:paddingTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:nextFocusForward="@+id/country" />

    <TextView
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:id="@+id/country_label"
        android:text="@string/select_country" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:id="@+id/country"
        android:spinnerMode="dropdown"
        android:dropDownSelector="@color/colorPrimaryDark"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
    <TextView
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:id="@+id/state_label"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/select_state" />
    <Spinner
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:id="@+id/state"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined" />
    <TextView
        android:paddingTop="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"/>
    <EditText android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/city"/>
    <TextView
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:id="@+id/year_label"
        android:text="@string/year"/>
    <Spinner
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="8dp"
        android:id="@+id/year"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined" />
    <Button
        android:id="@+id/add_location"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/set_location" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:id="@+id/coordinates"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:paddingTop="8dp"
            android:layout_height="wrap_content"
            android:id="@+id/latitude_val"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:id="@+id/longitude_val"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button"
            android:text="@string/reset"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <Button
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/add"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>

