<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdsu.deepak.mytabapplication.FilterFragment"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingLeft="16dp"
    android:paddingBottom="8dp"
    android:paddingRight="16dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_country"/>
        <Spinner
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/country_list_spinner"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <TextView
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by_state"/>
    <Spinner
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:id="@+id/state_list_spinner"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <TextView
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/year"
        android:text="@string/search_by_year" />
    <Spinner
        android:id="@+id/year_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp" />
    </android.support.v7.widget.LinearLayoutCompat>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search"
        android:text="@string/set"/>
</LinearLayout>

