<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
    <ImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:contentDescription="@string/nickname"
        android:src="@drawable/ic_face_black" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />
            <TextView
                android:id="@+id/user_location_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp" />
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:text="@string/year_label" />
            <TextView
                android:id="@+id/year_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp" />
        </android.support.v7.widget.LinearLayoutCompat>
    </LinearLayout>
</LinearLayout>