<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />
    <!--Use this Frame to inflate your Fragment -->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:showDividers="middle"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:divider="?android:attr/dividerHorizontal">

        <LinearLayout
            android:id="@+id/filter_fragment_container"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_by_country"/>
            <Spinner
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:id="@+id/country_list_spinner"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_by_state"/>
            <Spinner
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:id="@+id/state_list_spinner"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/year"
                android:text="@string/search_by_year" />
            <Spinner
                android:id="@+id/year_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp" />
        </android.support.v7.widget.LinearLayoutCompat>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_on_map"
                android:text="@string/set"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/load_more_button"
                android:text="@string/load_more"/>
    </LinearLayout>

        <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/user_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            map:mapType="normal"
            map:uiCompass="true"
            map:uiRotateGestures="true"
            map:uiScrollGestures="true"
            map:uiTiltGestures="true"
            map:uiZoomControls="true"
            map:uiZoomGestures="true" />

    </LinearLayout>
</LinearLayout>
    <!-- Your drawer content -->

